Setup basic app bundles and less loading.

--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Shared/_Layout.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Shared/_Layout.cshtml
@@ -38,6 +38,12 @@
     
     @Html.Partial("_Script_Loading")
     
+    <script type="text/javascript">
+        $(function() {
+            BID.App.Init();
+        });
+    </script>
+     
     @RenderSection("scripts", required: false)
 </body>
 </html>
