--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Shared/_Content_Loading.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Shared/_Content_Loading.cshtml
@@ -1,3 +1,2 @@
-﻿
-@Styles.Render("~/Content/css")
-@Scripts.Render("~/bundles/modernizr")
+﻿@Styles.Render("~/Content/css")
+@Styles.Render("~/Content/appcss")
