Setup basic post saving and view model communication.

--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Index.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@model BeforeID.Common.ViewModels.Page.PostPageViewModel
+﻿@model BeforeID.Common.ViewModels.PageViewModels.PostPageViewModel
 
 <div id="post-page">
+    
+    <input type="hidden" id="hidden-category-id" value="@Model.CategoryId"/>
     
     <div id="post-form" data-bind="with:Form">
         <div class="row">
