--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Index.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model BeforeID.Common.ViewModels.PageViewModels.PostPageViewModel
 
 <div id="post-page">
-    
-    <input type="hidden" id="hidden-category-id" value="@Model.CategoryId"/>
-    
+
+    <input type="hidden" id="hidden-category-id" value="@Model.CategoryId" />
+
     <div id="post-form" data-bind="with:Form">
         <div class="row">
             <div class="col-xs-12">
@@ -13,7 +13,7 @@
                         <div class="col-xs-9">
                             <input id="post-text" placeholder="Сакам да...." class="form-control" type="text" data-bind="value:PostText" />
                         </div>
-                        
+
                         <div class="col-xs-1">
                             <button class="btn btn-primary" data-bind="click:PublishPost">
                                 <i class="glyphicon glyphicon-plus"></i>
@@ -24,26 +24,31 @@
                 </div>
             </div>
         </div>
-
     </div>
 
-    <div id="post-overview" data-bind="with:Posts">
+    <div id="posts-overview" data-bind="with:PostsOverview">
 
         <div class="row">
             <div class="col-xs-12">
-
+                <ul class="list-group" data-bind="foreach:Posts,visible:Posts().length > 0 ">
+                    <li class="list-group-item" data-bind="text:Text, attr:{'data-post-id':Id}">
+                        
+                    </li>
+                </ul>
+                <button class="btn btn-default col-xs-12" data-bind="click:LoadMorePosts">
+                    Уште...
+                </button>
             </div>
         </div>
-
     </div>
 </div>
 
 @section scripts{
     <script type="text/javascript">
-        
+
         $(function () {
             var viewModel = BID.ViewModels.Pages.Posts.Main;
-            
+
             ko.applyBindings(viewModel, document.getElementById('post-page'));
 
             viewModel.Init();
