--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Index.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                     <div class="form-group">
                         <label class="col-xs-2" id="category-text" for="post-text">@Model.CategoryText</label>
                         <div class="col-xs-9">
-                            <input id="post-text" placeholder="Сакам да...." class="form-control" type="text" data-bind="value:PostText" />
+                            <input id="post-text" placeholder="Сакам да...." class="form-control" type="text" data-bind="value:PostText, valueUpdate:'afterkeydown', onEnterKey:PublishPost" />
                         </div>
 
                         <div class="col-xs-1">
