--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Content/css/App.css
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Content/css/App.css
@@ -7,7 +7,7 @@
   border-bottom: 1px solid #ccc;
 }
 #post-page #post-form #category-text {
-  font-size: 20px;
+  font-size: 21px;
   font-weight: bold;
   font-style: italic;
   margin-top: 3px;
@@ -23,7 +23,7 @@
   outline: none;
   box-shadow: none !important;
   padding-left: 0px !important;
-  font-size: 20px;
+  font-size: 21px;
   font-weight: bold;
   font-style: italic;
 }
@@ -38,4 +38,21 @@
 #post-page #posts-overview {
   padding-top: 10px;
   padding-bottom: 30px;
+  /*The list item containing the post */
+
+}
+#post-page #posts-overview .post-box {
+  font-size: 18px;
+  font-style: italic;
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
+}
+#post-page #posts-overview .post-box .post-view-category-text {
+  font-weight: bold;
+}
+#post-page #posts-overview .post-box .post-view-post-text {
+  color: #808080;
+}
+#post-page #posts-overview .post-box .post-view-date {
+  font-style: normal;
 }
