--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Content/css/App.css
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Content/css/App.css
@@ -47,12 +47,25 @@
   padding-top: 20px !important;
   padding-bottom: 20px !important;
 }
-#post-page #posts-overview .post-box .post-view-category-text {
+#post-page #posts-overview .post-box .post-text-content {
+  float: left;
+  width: 80%;
+  display: inline-block;
+}
+#post-page #posts-overview .post-box .post-text-content .post-view-category-text {
   font-weight: bold;
 }
-#post-page #posts-overview .post-box .post-view-post-text {
+#post-page #posts-overview .post-box .post-text-content .post-view-post-text {
   color: #808080;
 }
-#post-page #posts-overview .post-box .post-view-date {
+#post-page #posts-overview .post-box .post-utility-content {
+  width: 15%;
+  float: right;
+}
+#post-page #posts-overview .post-box .post-utility-content .post-view-date {
   font-style: normal;
+  float: right;
+}
+#post-page #posts-overview #load-more-posts-action {
+  font-size: 19px;
 }
