Setup fix deployment to azure.

--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Shared/_Layout.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 
     @Html.Partial("_Content_Loading")
 
+    <meta name="description" content="Пред да умрам сакам да..." />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
