Update about and contact page.

--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/About.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/About.cshtml
@@ -1,7 +1,22 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Зошто...";
 }
 
 <h2>Зошто?</h2>
 
-<p>Пред е апликација....</p>
+<p>
+    "Пред да умрам..." е мала викенд апликација инспирирана од следниот проект:
+</p>
+
+<p>
+    <ul>
+        <li>
+            <a href="http://beforeidie.cc/"> Before I Die </a>
+        </li>
+    </ul>
+</p>
+
+<p>
+    Кодот на апликацијата наскоро ќе биде поставен на <a href="http://www.github.com">Github</a>
+</p>
+
