--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Contact.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Contact.cshtml
@@ -1,6 +1,6 @@
 ﻿
-<h2>Контакт</h2>
+<h2>Контакт Информации : </h2>
 
 <address>
-    <strong>Email:</strong>   <a href="mailto:Support@example.com">mail@pred.com</a><br />
+    <strong>Емаил:</strong>   <a href="mailto:preddaumram@gmail.com">preddaumram@gmail.com</a><br />
 </address>
