--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Contact.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Contact.cshtml
@@ -1,6 +1,9 @@
 ﻿
-<h2>Контакт Информации : </h2>
+<h2>Контакт </h2>
 
+<p>За било какви прашања и сугестии ... </p>
 <address>
-    <strong>Емаил:</strong>   <a href="mailto:preddaumram@gmail.com">preddaumram@gmail.com</a><br />
+    <strong>E-mail : </strong>   <a href="mailto:preddaumram@gmail.com">preddaumram@gmail.com</a><br />
 </address>
+
+<p class="small-print">Авторот не гарантира дека воопшто ќе добиете одговор, но верувајте, email адресата е валидна. </p>
