--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Contact.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Contact.cshtml
@@ -1,7 +1,7 @@
-﻿
-<h2>Контакт </h2>
+﻿<h2>Контакт </h2>
 
 <p>За било какви прашања и сугестии ... </p>
+
 <address>
     <strong>E-mail : </strong>   <a href="mailto:preddaumram@gmail.com">preddaumram@gmail.com</a><br />
 </address>
