--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Content/css/App.css
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Content/css/App.css
@@ -35,6 +35,12 @@
   border-radius: 0px;
   box-shadow: none !important;
 }
+#post-page #post-form #post-color {
+  margin-top: 10px;
+}
+#post-page #post-form #post-color + div {
+  margin-top: 20px;
+}
 #post-page #posts-overview {
   padding-top: 10px;
   padding-bottom: 30px;
@@ -46,6 +52,8 @@
   font-style: italic;
   padding-top: 20px !important;
   padding-bottom: 20px !important;
+  /*Add the different color posts*/
+
 }
 #post-page #posts-overview .post-box .post-text-content {
   float: left;
@@ -54,9 +62,10 @@
 }
 #post-page #posts-overview .post-box .post-text-content .post-view-category-text {
   font-weight: bold;
+  color: #000;
 }
 #post-page #posts-overview .post-box .post-text-content .post-view-post-text {
-  color: #808080;
+  color: #000;
 }
 #post-page #posts-overview .post-box .post-utility-content {
   width: 15%;
@@ -65,7 +74,11 @@
 #post-page #posts-overview .post-box .post-utility-content .post-view-date {
   font-style: normal;
   float: right;
+  border: 1px solid #000;
 }
 #post-page #posts-overview #load-more-posts-action {
   font-size: 19px;
+}
+.small-print {
+  font-size: 7px !important;
 }
