--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Index.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/Index.cshtml
@@ -9,9 +9,16 @@
             <div class="col-xs-12">
                 <div class="form-horizontal">
                     <div class="form-group">
+                        
                         <label class="col-xs-2" id="category-text" for="post-text">@Model.CategoryText</label>
-                        <div class="col-xs-9">
-                            <input id="post-text" placeholder="Сакам да...." class="form-control" type="text" data-bind="value:PostText, valueUpdate:'afterkeydown', onEnterKey:PublishPost, maxCharacters:90" />
+                        <div class="col-xs-8">
+                            <input id="post-text" placeholder="сакам да...." class="form-control" type="text" data-bind="value:PostText, valueUpdate:'afterkeydown', onEnterKey:PublishPost, maxCharacters:90" />
+                        </div>
+
+                        <div class="col-xs-1">
+                            
+                            <input id="post-color" type="text" data-bind="colorPicker:PostColor" />
+
                         </div>
 
                         <div class="col-xs-1">
@@ -31,7 +38,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <ul class="list-group" data-bind="foreach:Posts,visible:Posts().length > 0 ">
-                    <li class="list-group-item post-box" data-bind=" attr:{'data-post-id':Id}">
+                    <li class="list-group-item post-box" data-bind=" attr:{'data-post-id':Id}, style:{'background-color': PostColor}">
 
                         <div class="post-text-content">
                             <span class="post-view-category-text" data-bind="text:CategoryText"></span>
@@ -42,7 +49,7 @@
                         <div class="post-utility-content">
                             <span class="label label-primary post-view-date" data-bind="text:Date"></span>
                         </div>
-                        
+
                         <div class="clearfix"></div>
 
                     </li>
