Update about page for github repo and deployment structure.

--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/About.cshtml
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Views/Home/About.cshtml
@@ -17,6 +17,6 @@
 </p>
 
 <p>
-    Кодот на апликацијата наскоро ќе биде поставен на <a href="http://www.github.com">Github</a>
+    Кодот на апликацијата e поставен на <a href="https://github.com/emir-/BeforeIDie">Github</a>
 </p>
 
